Archive2/3b/0f49f60429e545/output
In file included from main.cpp:3:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/thread:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
In file included from main.cpp:6:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/atomic:41:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:74:3: error: unknown type name 'constexpr'
  constexpr memory_order
  ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:74:25: error: expected ';' after top level declarator
  constexpr memory_order
                        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:124:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<char>                   atomic_char;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:124:24: error: expected unqualified-id
  typedef __atomic_base<char>                   atomic_char;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:127:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<signed char>            atomic_schar;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:127:24: error: expected unqualified-id
  typedef __atomic_base<signed char>            atomic_schar;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:130:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<unsigned char>          atomic_uchar;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:130:24: error: expected unqualified-id
  typedef __atomic_base<unsigned char>          atomic_uchar;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:133:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<short>                  atomic_short;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:133:24: error: expected unqualified-id
  typedef __atomic_base<short>                  atomic_short;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:136:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<unsigned short>         atomic_ushort;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:136:24: error: expected unqualified-id
  typedef __atomic_base<unsigned short>         atomic_ushort;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:139:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<int>                    atomic_int;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:139:24: error: expected unqualified-id
  typedef __atomic_base<int>                    atomic_int;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:142:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<unsigned int>           atomic_uint;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:142:24: error: expected unqualified-id
  typedef __atomic_base<unsigned int>           atomic_uint;
                       ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:145:11: error: unknown type name '__atomic_base'
  typedef __atomic_base<long>                   atomic_long;
          ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/atomic_base.h:145:24: error: expected unqualified-id
  typedef __atomic_base<long>                   atomic_long;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
